// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar el componente con la imagen del producto 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product image"
      class="productImg undefined"
      src="./coffee-mug.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductImage Debe mostrar el componente correctamente con la imagen personalizada 1`] = `
<DocumentFragment>
  <img
    alt="Product image"
    class="productImg undefined"
    src="https://hola.jpg"
  />
</DocumentFragment>
`;
